# ListMediaInfo

./: .gitignore  Changelog.md  ListMediaInfo.py  README.md  lmi-changes.md  lmiconfig.py  lmiconfig.yaml  main.py  pyproject.toml
Examples/a) 12 similar files/: ×Name [HEVC 1920×1080 0.8–1.6m 10b crf24, AAC 6ch 529–640k +s×12, +c×4 AAC 2ch ~80k, Source].nfo  ×Name [HEVC 1920×1080 0.8–1.6m 10b crf24, AAC 6ch 529–640k +s×12, +c×4 AAC 2ch ~80k, Source]_SpaceAligned.nfo
Examples/b) 10+2 different files/: ×Name [AVC-HEVC-MPEG 468–1080p 0.6–17.7m 8-10b abr-crf20-24, AAC-AC3-EAC3 2-6ch 66–640k +s×4, +c×4 AAC 2ch ~63k, Source].nfo  ×Name [AVC-HEVC-MPEG 468–1080p 0.6–17.7m 8-10b abr-crf20-24, AAC-AC3-EAC3 2-6ch 66–640k +s×4, +c×4 AAC 2ch ~63k, Source]_SpaceAligned.nfo
Examples/c) 2 different files/: ×Name [AVC-HEVC 468-1080p 0.6-0.8m 8-10b crf24, AAC-EAC3 2-6ch 66-640k +s, +c AAC 2ch 66k, Source].nfo  ×Name [AVC-HEVC 468-1080p 0.6-0.8m 8-10b crf24, AAC-EAC3 2-6ch 66-640k +s, +c AAC 2ch 66k, Source]_SpaceAligned.nfo
