[project]
name           	= "listmediainfo"
version        	= "0.1.0"
description    	= "Add your description here"
readme         	= "README.md"
requires-python	= ">=3.13"
dependencies   	= [
  "appdirs>=1.4.4",
  "fastnumbers>=5.1.1",
  "hfilesize",
  "natsort>=8.4.0",
  "pymediainfo>=7.0.1",
  "strictyaml>=1.7.3",
]

[tool.uv.sources]
hfilesize = { git = "https://github.com/eugenesvk/hfilesize" }
